[metadata]
name = papermerge-s3
version = 1.3.0
description = S3 Storage for Papermerge DMS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.papermerge.com/
author = Eugen Ciur
author_email = eugen@papermerge.com
license = Apache 2.0 License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true

[pycodestyle]
max-line-length = 80
